--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,8 +137,8 @@ span {
 
 .header__numbers {
   position: absolute;
-  width: 550px;
-  height: 131px;
+  width: 40%;
+  height: 19vh;
   background-color: #fff;
   z-index: 1;
   left: 30%;
@@ -147,6 +147,7 @@ span {
 
 .header__numbers li {
   width: 33%;
+  height: 19vh;
   padding: 25px;
   box-sizing: border-box;
   float: left;
@@ -158,7 +159,7 @@ span {
   height: 131px;
   position: absolute;
   z-index: 1;
-  left: 68%;
+  left: 70%;
   top: 67vh;
 }
 
@@ -168,8 +169,8 @@ span {
   height: 130px;
   position: absolute;
   z-index: 2;
-  left: -25px;
-  top: -25px;
+  left: -20px;
+  top: -20px;
   color: white;
 }
 
