--- a/assets/sass/layout/_info.scss
+++ b/assets/sass/layout/_info.scss
@@ -25,10 +25,10 @@
 .info__map-img {
   position: absolute;
   z-index: 1;
-  width: 500px;
-  height: 250px;
-  top: 650px;
-  left: 380px;
+  width: 35%;
+  height: 35vh;
+  top: 95vh;
+  left: 25%;
   object-fit: cover;
 }
 
