--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,7 +138,7 @@ span {
 .header__numbers {
   position: absolute;
   width: 40%;
-  height: 19vh;
+  height: 131px;
   background-color: #fff;
   z-index: 1;
   left: 30%;
@@ -206,10 +206,10 @@ span {
 .info__map-img {
   position: absolute;
   z-index: 1;
-  width: 500px;
-  height: 250px;
-  top: 650px;
-  left: 380px;
+  width: 35%;
+  height: 35vh;
+  top: 95vh;
+  left: 25%;
   object-fit: cover;
 }
 
