--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -30,7 +30,7 @@
 .header__numbers {
   position: absolute;
   width: 40%;
-  height: 19vh;
+  height: 131px;
   background-color: $white;
   z-index: 1;
   left: 30%;
